Small update to window.scrollTo
Made the window.scrollTo function take the body scrollLeft value instead
of 0 be default to ensure the scroll position remains exactly where it
was.

--- a/fix.html
+++ b/fix.html
@@ -29,7 +29,7 @@
 		(function(){
 			var ios7bars = null, // Variable to hold the state of the address and bookmarks bar so the event is triggered only once per state once.
 					refresh = function(){ // This function forces Safari to redraw the page and triggers the window resize event that was removed.
-						window.scrollTo(0, document.body.scrollTop);
+						window.scrollTo(document.body.scrollLeft, document.body.scrollTop);
 						window.dispatchEvent(new Event('resize'));
 					};
 
